<resources>
    <string name="app_name">Alapon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share_everything">Share everything \n on your mind here.</string>
    <string name="invite_your_friends">Invite your friends and family, \n share them everything on your mind! \n Feel free also enjoy this all features!</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_here">Login Here</string>
    <string name="welcome_back">Welcome back. You\'ve \n been missed!</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="create_an_account_text">Create an Account, so you can share everything \n on your mind</string>
    <string name="user_name">Enter your User Name here</string>
    <string name="email">Enter your Email here</string>
    <string name="password">Enter your Password here</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="create_new_account">Create new account</string>
    <string name="jubayer_ahamad_tayef">Jubayer Ahamad Tayef</string>
    <string name="time">10:50 PM</string>
    <string name="assalamualaikum">Assalamualaikum...</string>
    <string name="user_list">User List</string>
    <string name="mdjubayerahamadtayef_gmail_com">mdjubayerahamadtayef@gmail.com</string>
    <string name="i_am_an_android_developer">I am an Android Developer.</string>
    <string name="enter_your_bio_here">Enter Your Bio Here</string>
    <string name="update">Update</string>
    <string name="design_by">Design By</string>
    <string name="user_name_txt">User Name</string>
    <string name="user_email_txt">User Email</string>
    <string name="type_your_message_here">Type your message here...</string>
</resources>